# hibikido-server

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
artefacts/: database-design.js  thread.json
src/: audiomancer-python.maxpat  audiomancer.maxpat  csv_importer.py  database_manager.py  embedding-server.bat  embedding-server.py  embedding_manager.py  entries.json  incantation-server.bat  incantations.index  main_server.py  osc_handler.py  start-hibikido.bat  text_processor.py  unified.index
src/hibikido/: __init__.py  csv_importer.py  database_manager.py  embedding_manager.py  main_server.py  orchestrator.py  osc_handler.py  text_processor.py
src/tests/: simple_integration_test.py  test_hibikido_database.py  text_processor_test.py
tests/: test_hibikido_database.py  test_invocation_integration.py  test_orchestrator.py  test_simple_integration.py  test_text_processor.py
