[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hibikido"
version = "0.1.0"
description = "Semantic search engine for musical sounds and effects"
readme = "README.md"
authors = [
    {name = "Jean-Philippe Drecourt", email = "jpdrecourt@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "sentence-transformers>=2.0.0",
    "python-osc>=1.8.0",
    "faiss-cpu>=1.7.0",
    "torch>=1.9.0",
    "pymongo>=4.0.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "spacy>=3.4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.scripts]
hibikido-server = "hibikido.main_server:main"

[project.urls]
Homepage = "https://github.com/jpdrecourt/hibikido"
Repository = "https://github.com/jpdrecourt/hibikido.git"
Issues = "https://github.com/jpdrecourt/hibikido/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py38']